# Proj3CPP

./: CMakeLists.txt  README.md
doc/: ai.md  command.sh  report.md
important/: complete.csv  fastPath.csv
important/results/: ooc.csv  plot_ooc.py  res01.sh
src/: ai.md  command.sh  main.c  main.h  ooc.c  plot.csv  q.md  result.csv  temp.c  test.c
